# sb123456

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  record_consumer.c  record_consumer.cpp  record_consumer.h
main/io/: reader.h
test/: CMakeLists.txt  main.c  main.cpp
test/fsm/: TestFSM.c  TestFSM.cpp  TestFSM.h
test/initialization/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h
test/io/: test_read.cpp  test_read.h  test_schema.h
